AgriStore/force-app/main/default/objects/Booking__c/fields/Farmer__c.field-meta.xml
<CustomField>
    <fullName>Farmer__c</fullName>
    <label>Farmer</label>
    <referenceTo>Farmer__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>