AgriStore/force-app/main/default/objects/Booking__c/validationRules/AgriStore_Booking_Future_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>AgriStore_Booking_Future_Dates</fullName>
    <active>true</active>
    <description>Ensures booking start date is in the future (not in the past)</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Date__c)),
    Start_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Booking start date must be today or in the future. Cannot book equipment for past dates.</errorMessage>
</ValidationRule>