AgriStore/force-app/main/default/objects/Booking__c/validationRules/AgriStore_Booking_No_Overlap.validationRule-meta.xml
<ValidationRule>
    <fullName>AgriStore_Booking_No_Overlap</fullName>
    <active>true</active>
    <description>Prevents overlapping bookings for the same equipment by checking if there are existing bookings with overlapping date ranges</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Date__c)),
    NOT(ISBLANK(End_Date__c)),
    Start_Date__c &gt; End_Date__c
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Invalid date range: Start Date must be before or equal to End Date.</errorMessage>
</ValidationRule>